--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 			</ul>
 
 			<div class="shopping-cart">
-				<span class="material-symbols-outlined"> shopping_cart </span>
+				<a href="./src/public/shop_cart.html">
+					<span class="material-symbols-outlined"> shopping_cart </span>
+				</a>
 				<b></b>
 			</div>
 		</nav>
