add server, middelwares, and routes

--- a/server/public/pages/about.html
+++ b/server/public/pages/about.html
@@ -21,13 +21,15 @@
 					<span class="material-symbols-outlined burger-menu"> menu </span>
 				</li>
 				<li class="home">
-					<a href="../../index.html">Inicio</a>
+					<a href="/productos">Inicio</a>
 				</li>
 				<li class="hidden">Contacto</li>
 				<li class="hidden">Acerca de</li>
 			</ul>
 			<div class="shopping-cart">
-				<span class="material-symbols-outlined"> shopping_cart </span>
+				<a href="compras">
+					<span class="material-symbols-outlined"> shopping_cart </span>
+				</a>
 				<b></b>
 			</div>
 		</nav>
