--- a/server/public/pages/shop_cart.html
+++ b/server/public/pages/shop_cart.html
@@ -17,10 +17,10 @@
 					<span class="material-symbols-outlined burger-menu"> menu </span>
 				</li>
 				<li class="home">
-					<a href="../../index.html">Inicio</a>
+					<a href="/productos">Inicio</a>
 				</li>
 				<li class="hidden">Contacto</li>
-				<li class="hidden"><a href="./about.html">Acerca de</a></li>
+				<li class="hidden"><a href="/sobre-mi">Acerca de</a></li>
 			</ul>
 
 			<div class="shopping-cart">
