--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
 		/>
-		<link rel="stylesheet" href="./src/styles/index.css" />
+		<link rel="stylesheet" href="styles/index.css" />
 	</head>
 	<body>
 		<nav>
@@ -20,11 +20,13 @@
 					<a href="#">Inicio</a>
 				</li>
 				<li class="hidden">Contacto</li>
-				<li class="hidden"><a href="./src/public/about.html">Acerca de</a></li>
+				<li class="hidden">
+					<a href="sobre-mi">Acerca de</a>
+				</li>
 			</ul>
 
 			<div class="shopping-cart">
-				<a href="./src/public/shop_cart.html">
+				<a href="compras">
 					<span class="material-symbols-outlined"> shopping_cart </span>
 				</a>
 				<b></b>
@@ -44,14 +46,14 @@
 				<figcaption>
 					<h2>Los mejores productos para ti</h2>
 				</figcaption>
-				<img src="./src/assets/img/header.png" alt="header" />
+				<img src="assets/img/header.png" alt="header" />
 			</figure>
 		</header>
 		<main>
 			<div class="list-products">
 				<template id="product-template">
 					<figure class="product">
-						<img src="./src/assets/img/header.png" alt="product" />
+						<img src="assets/img/header.png" alt="product" />
 						<figcaption class="product-description">
 							<small class="product-name"></small>
 							<small class="product-price"></small>
@@ -66,6 +68,6 @@
 			</div>
 		</main>
 		<footer><small>Developed by Jefferson Mejía</small></footer>
-		<script src="./src/js/index.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 </html>
