--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
 			</div>
 		</main>
 		<footer><small>Developed by Jefferson Mejía</small></footer>
-		<script src="js/index.js"></script>
+		<script src="js/index.js" type="module"></script>
 	</body>
 </html>
