add data payment from backend to client app

--- a/server/public/pages/shop_cart.html
+++ b/server/public/pages/shop_cart.html
@@ -61,15 +61,15 @@
 					<h3>Facturacion</h3>
 					<div>
 						<h5>Subtotal</h5>
-						<small>$10.2600</small>
+						<small class="payment-subtotal">--</small>
 					</div>
 					<div>
 						<h5>IVA</h5>
-						<small>$100.00</small>
+						<small class="payment-iva">--</small>
 					</div>
 					<div>
 						<h5>Total</h5>
-						<small>$10.2600</small>
+						<small class="payment-total">--</small>
 					</div>
 					<button id="pay-shop">Pagar</button>
 				</article>
