update db script

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 				<div class="loader-circle"></div>
 				<div class="loader-text">Cargando...</div>
 			</div>
+			<div class="abort-products hidden">
+				<small
+					>Los productos no se han podido cargar correctamente, intenta más tarde.</small
+				>
+			</div>
 		</main>
 		<section class="register-modal hidden">
 			<form>
