add data no available page

--- a/server/public/pages/shop_cart.html
+++ b/server/public/pages/shop_cart.html
@@ -55,6 +55,14 @@
 						<div class="loader-circle"></div>
 						<div class="loader-text">Cargando...</div>
 					</div>
+					<div class="shops-unavailable hidden">
+						<figure>
+							<img src="../assets/shops-unavailable.svg" alt="" />
+							<figcaption>
+								<h4>No tienes compras activas</h4>
+							</figcaption>
+						</figure>
+					</div>
 				</article>
 
 				<article class="payment-resumen">
@@ -71,7 +79,7 @@
 						<h5>Total</h5>
 						<small class="payment-total">--</small>
 					</div>
-					<button id="pay-shop">Pagar</button>
+					<button id="pay-shop" class="btn-disabled" disabled>Pagar</button>
 				</article>
 			</section>
 		</main>
