add cart to /about

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 				<li class="home">
 					<a href="#">Inicio</a>
 				</li>
-				<li class="hidden">Contacto</li>
+				<li class="hidden">
+					<a href="https://www.linkedin.com/in/jeffersonmejia/" target="_blank"
+						>Contacto</a
+					>
+				</li>
 				<li class="hidden">
 					<a href="sobre-mi">Acerca de</a>
 				</li>
