--- a/server/public/pages/about.html
+++ b/server/public/pages/about.html
@@ -23,7 +23,11 @@
 				<li class="home">
 					<a href="/productos">Inicio</a>
 				</li>
-				<li class="hidden">Contacto</li>
+				<li class="hidden">
+					<a href="https://www.linkedin.com/in/jeffersonmejia/" target="_blank"
+						>Contacto</a
+					>
+				</li>
 				<li class="hidden">Acerca de</li>
 			</ul>
 			<div class="shopping-cart">
@@ -71,6 +75,6 @@
 				</figcaption>
 			</figure>
 		</header>
-		<script src="../js/about.js"></script>
+		<script src="../js/about.js" type="module"></script>
 	</body>
 </html>
