--- a/server/public/pages/shop_cart.html
+++ b/server/public/pages/shop_cart.html
@@ -19,7 +19,11 @@
 				<li class="home">
 					<a href="/productos">Inicio</a>
 				</li>
-				<li class="hidden">Contacto</li>
+				<li class="hidden">
+					<a href="https://www.linkedin.com/in/jeffersonmejia/" target="_blank"
+						>Contacto</a
+					>
+				</li>
 				<li class="hidden"><a href="/sobre-mi">Acerca de</a></li>
 			</ul>
 
@@ -30,8 +34,14 @@
 		</nav>
 		<aside class="aside hidden">
 			<ul>
-				<li>Contacto</li>
-				<li>Acerca de</li>
+				<li class="hidden">
+					<a href="https://www.linkedin.com/in/jeffersonmejia/" target="_blank"
+						>Contacto</a
+					>
+				</li>
+				<li class="hidden">
+					<a href="sobre-mi">Acerca de</a>
+				</li>
 				<li>
 					<button class="aside-back">Volver</button>
 				</li>
