--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="list-products">
 				<template id="product-template">
 					<figure class="product">
-						<img src="assets/img/header.png" alt="product" />
+						<img class="product-color" alt="product" />
 						<figcaption class="product-description">
 							<small class="product-name"></small>
 							<small class="product-price"></small>
