--- a/server/public/pages/shop_cart.html
+++ b/server/public/pages/shop_cart.html
@@ -52,7 +52,7 @@
 				<article>
 					<template id="product-template">
 						<figure>
-							<img src="../assets/img/header.png" alt="" />
+							<img alt="product" class="product-color" />
 							<figcaption>
 								<small class="product-name"></small>
 								<small class="products-shops"> </small>
